syntax = "proto3";

package logs;

// Log Service - Handles log ingestion and retrieval
service LogService {
  // Ingest a single log or batch of logs
  rpc IngestLogs(IngestLogsRequest) returns (IngestLogsResponse);
  
  // Query logs by app_id
  rpc GetLogsByAppId(GetLogsByAppIdRequest) returns (GetLogsByAppIdResponse);
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Messages for IngestLogs
message IngestLogsRequest {
  repeated LogEntry logs = 1;
}

message LogEntry {
  string app_id = 1;
  string level = 2;
  string message = 3;
  string timestamp = 4;
  map<string, string> metadata = 5;
}

message IngestLogsResponse {
  bool success = 1;
  string message = 2;
  int32 accepted = 3;
  int32 rejected = 4;
  double processing_time_ms = 5;
  double throughput = 6;
  repeated IngestError errors = 7;
}

message IngestError {
  int32 index = 1;
  string error = 2;
}

// Messages for GetLogsByAppId
message GetLogsByAppIdRequest {
  string app_id = 1;
  int32 limit = 2; // Optional, defaults to 1000
}

message GetLogsByAppIdResponse {
  bool success = 1;
  string message = 2;
  int32 count = 3;
  repeated LogEntry logs = 4;
  bool has_more = 5;
  double query_time_ms = 6;
}

// Messages for HealthCheck
message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  string message = 2;
  string timestamp = 3;
  double latency_ms = 4;
  double ping_latency_ms = 5;
  string version = 6;
  string error = 7;
}

